Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11914

Can't debug QML when using QBS. Qt.Quick.qmlDebugging does nothing

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • Qt Creator 3.1.0-beta
    • Debugger
    • None
    • Mac OS X 10.9
    • d74004353467f47a2bc4417bdfd277a1cd26c780 (qbs), 9b76912f2f072da2cc3d6915e14d1491766d30a6 (QtC)

    Description

      Enabling debugging through Project->QBS->Enable QML Debugging or using Qt.quick.qmlDebugging: true in a qbs file has no effect. The QML debugging code isn't added to the application and QML debugger can't connect tho the app.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            vpicaver Philip Schuchardt
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes