Fix QML debugging for Qt 5.

The line enabling the respective C++ macro got lost when we switched to
the new Qt module approach. (And the name of the macro was wrong for Qt
5 anyway, so it hadn't worked before either.)
Also add an autotest to catch things like macro renaming in the future.

Task-number: QTCREATORBUG-11914
Change-Id: Ica188c20e99c204d1a9d4e5f285a938707d997dd
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>