tests/auto/blackbox/testdata/qml-debugging/project.qbs
@@ -1,0 +1,9 @@
+import qbs
+
+CppApplication {
+    name: "debuggable-app"
+    type: "application"
+    Depends { name: "Qt.quick" }
+    Qt.quick.qmlDebugging: true
+    files: "main.cpp"
+}
